--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "deploy:goerli": "DEPLOY='v0.0.1.goerli' hardhat deploy",
-    "verify:goerli": "yarn hardhat etherscan-verify --network goerli --api-url https://api-goerli.etherscan.io/ --api-key $GOERLI_ETHERSCAN_API_KEY"
+    "deploy:sepolia": "DEPLOY='v0.0.1.sepolia' hardhat deploy",
+    "verify:sepolia": "yarn hardhat etherscan-verify --network sepolia --api-url https://api-sepolia.etherscan.io/ --api-key $SEPOLIA_ETHERSCAN_API_KEY"
   },
   "devDependencies": {
     "@gelatonetwork/relay-sdk": "^5.5.0",
