--- a/.github/workflows/smart_contracts.yml
+++ b/.github/workflows/smart_contracts.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           node-version: "16.x"
           cache: "npm"
+          cache-dependency-path: "contracts/yarn.lock"
 
       - name: Install Node dependencies
         run: |
