--- a/shop/package.json
+++ b/shop/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -22,10 +23,12 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "connectkit": "^1.6.0",
+    "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.0",
