--- a/shop/package.json
+++ b/shop/package.json
@@ -33,6 +33,7 @@
     "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.0",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13"
   },
