fix package json after rebase

--- a/shop/package.json
+++ b/shop/package.json
@@ -34,6 +34,7 @@
     "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13"
@@ -43,6 +44,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
