--- a/shop/package.json
+++ b/shop/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "pusher-js": "^8.4.0-rc2",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-day-picker": "^8.10.0",
