use different port for payment app (for local testing)

--- a/payment_app/package.json
+++ b/payment_app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "eth-sdk  && graphclient build && next dev",
+    "dev": "eth-sdk  && graphclient build && next dev -p 4000",
     "build": "eth-sdk && graphclient build && next build",
     "start": "next start",
     "lint": "next lint",
