--- a/shop/package.json
+++ b/shop/package.json
@@ -38,6 +38,7 @@
     "wagmi": "^1.4.13"
   },
   "devDependencies": {
+    "@graphprotocol/client-cli": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
