--- a/shop/package.json
+++ b/shop/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^0.2.0",
     "connectkit": "^1.6.0",
     "date-fns": "^3.2.0",
+    "ethers": "^6.10.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
