--- a/payment_app/package.json
+++ b/payment_app/package.json
@@ -40,6 +40,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.241.0",
     "next": "13.4.4",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.24",
     "pusher": "^5.1.3",
     "pusher-js": "^8.2.0",
